--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -57,13 +57,23 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #fff;
+    background-image: url(../../assets/background.jpg);
+    background-size: cover;
 }
 
 h1 {
     font-size: 2rem;
-    color: #000;
+    color: #fff;
     margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .add-inner-container {
@@ -84,6 +94,14 @@ input[type="text"] {
     border-radius: 5px;
 }
 
+textarea {
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: 5px;
+}
+
 .add-descr-img {
     display: flex;
     flex-direction: column;
@@ -92,6 +110,28 @@ input[type="text"] {
     margin-top: 1rem;
 }
 
-input[type="file"] {
-    margin-top: 1rem;
+
+.add-file {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+button[type="submit"] {
+    background-color: #E7AE22;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    cursor: pointer;
+    margin-top: 1.5rem;
+}
+
+button[type="submit"]:hover {
+    background-color: #000;
+    color: #fff;
 }
