--- a/src/components/Add/Add.css
+++ b/src/components/Add/Add.css
@@ -33,7 +33,8 @@ form {
     border-radius: 10px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="url"] {
     width: 100%;
     padding: 0.5rem;
     margin-bottom: 1rem;
