--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url(../../assets/background.jpg);
     background-size: cover;
 }
@@ -86,6 +86,7 @@
 
 .projects-buttons {
     margin-left: 15px;
+    gap: 5px;
     display: flex;
     flex-direction: column;
 }
@@ -124,5 +125,9 @@
     .projects-buttons {
         margin-top: 15px;
         flex-direction: row;
+    }
+
+    .projects-container {
+        padding-top: 100px;
     }
 }
