--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -60,8 +60,8 @@
 }
 
 .individual-project button:nth-of-type(2):hover {
-    background-color: #000;
-    color: #fff;
+    background-color: rgb(149, 198, 245);
+    color: #000;
 }
 
 .individual-project button:nth-of-type(3):hover {
@@ -89,6 +89,15 @@
     gap: 5px;
     display: flex;
     flex-direction: column;
+}
+
+.projects-buttons a {
+    color: #000;
+    text-decoration: none;
+}
+
+.projects-buttons a:hover {
+    color: #000;
 }
 
 .projects-buttons button {
