--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -21,6 +21,7 @@
     color: #fff;
     letter-spacing: 2px;
     text-transform: uppercase;
+    border-radius: 15px;
 }
 
 @media screen and (max-width: 768px) {
