--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -45,18 +45,24 @@
 .individual-project button:nth-of-type(1) {
     background-color: #000;
     color: #fff;
+    border: 1px solid #E7AE22;
+}
+
+.individual-project button:nth-of-type(1):hover {
+    background-color: #fff;
+    color: #000;
 }
 
 .individual-project button:nth-of-type(2) {
     background-color: #fff;
     color: #000;
-    border: 1px solid #000;
+    border: 1px solid #E7AE22;
 }
 
 .individual-project button:nth-of-type(3) {
     background-color: #fff;
     color: #000;
-    border: 1px solid #000;
+    border: 1px solid #E7AE22;
 }
 
 .individual-project button:nth-of-type(2):hover {
